tutorials/combine-policy-rules.yaml
# Allow egress to external VM
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: egress-to-private-vm-443
spec:
 podSelector:
    matchLabels:
      app: foo
 egress:
   - to:
       - ipBlock:
           cidr: 192.168.1.22/32
   - ports:
       - port: 443
