tutorials/empty-selectors.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector: {}
  ingress:
    - {}
    - from:
        - podSelector: {}
